# pybwa

./: .gitmodules  .readthedocs.yml  README.md  build.py  bwapy.yml  mkdocs.yml  pybwa.yml  pyproject.toml  valgrind.sh
.github/actions/cibuildwheel/: action.yaml
.github/workflows/: ci.yml  delete_me.yml  publish_pybwa.yml  readthedocs.yaml  tests.yml  wheels.yml
bwapy/: __init__.py  libbwaaln.pxd  libbwaaln.pyi  libbwaaln.pyx  libbwaindex.pxd  libbwaindex.pyi  libbwaindex.pyx  libbwamem.pxd  libbwamem.pyi  libbwamem.pyx  libbwapy.pxd  libbwapy.pyi  libbwapy.pyx  libbwapy_utils.c
ci/: linux-deps
docs/: api.rst  conf.py  index.md  index.rst  install.rst  installation-and-developers-documentation.md
docs/scripts/: gen_ref_pages.py
patches/: 0001-feat-add-HN-tag-to-bwa-aln.patch  0002-feat-add-an-option-to-output-MD-in-the-XA-tag.patch  0003-feat-expose-various-internal-bwamem-methods-and-stru.patch  0004-feat-add-mem_opt_print-for-debugging.patch  0005-feat-adding-support-for-SAM-BAM-output-using-htslib.patch  0005-feat-make-bwa_verbose-visible.patch  0006-feat-try-to-speed-up-bam-record-creation.patch  0007-chore-use-htslib-s-kstring-when-available.patch  0008-feat-track-in-bwa-aln-if-an-exhaustive-search-exits-.patch
pybwa/: __init__.py  libbwa.pxd  libbwa.py  libbwa.pyi  libbwa.pyx  libbwa_utils.c  libbwa_utils.h  libbwa_utils.pxd  libbwa_utils.pyi  libbwa_utils.pyx  libbwaaln.pxd  libbwaaln.pyi  libbwaaln.pyx  libbwaaln_utils.c  libbwaaln_utils.h  libbwaalnopt.pxd  libbwaalnopt.pyi  libbwaalnopt.pyx  libbwaindex.pxd  libbwaindex.pyi  libbwaindex.pyx  libbwamem.pxd  libbwamem.pyi  libbwamem.pyx  libbwamem_utils.c  libbwamemopt.pxd  libbwamemopt.pyi  libbwamemopt.pyx
tests/: _test_libbwaaln.pyx  _test_libbwaindex.pyx  _test_libbwaindex.pyxbld  _test_libbwamem.pyx  conftest.py  test_bwapy.py  test_error_handling.py  test_libbwaaln.py  test_libbwaindex.py  test_libbwaln.py  test_libbwamem.py  test_pybwa.py  test_resource_management.py  utils.py
